# controllers/corrective.js
@@ -4,7 +4,7 @@ const mongodb = require('../db/connect');
 
 const getAll = async (req, res) => {
   try{
-    const result = await mongodb.getDb().db('testdb').collection('contacts').find();
+    const result = await mongodb.getDb().db('corrective').collection('corrective').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists);
@@ -16,8 +16,8 @@ const getAll = async (req, res) => {
 
 const getOne = async (req, res) => {
   try {
-    const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db('testdb').collection('contacts').find({ _id: userId });
+    const corrective = new ObjectId(req.params.id);
+  const result = await mongodb.getDb().db('corrective').collection('corrective').find({ _id: corrective });
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(lists[0]);
@@ -27,20 +27,22 @@ const getOne = async (req, res) => {
   }
 };
 
-const createContact = async (req, res) => {
+const createCorrective = async (req, res) => {
   try{ 
-    const contact = {
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
-    birthday: req.body.birthday
+    const corrective = {
+    corrective_id: req.body.corrective_id,
+    description: req.body.description,
+    subject: req.body.subject,
+    assigned_to: req.body.assigned_to,
+    closed: req.body.closed,
+    created_date: req.body.created_date,
+    closed_date: req.body.closed_date
   };
-const response = await mongodb.getDb().db('testdb').collection('contacts').insertOne(contact);
+const response = await mongodb.getDb().db('corrective').collection('corrective').insertOne(corrective);
 if (response.acknowledged) {
   res.status(201).json(response);
 } else {
-  res.status(500).json(response.error || 'Error occured shile creating contact.');
+  res.status(500).json(response.error || 'Error occured while creating contact.');
 }  
 } catch {
   res.status(500).json(err);
@@ -84,4 +86,4 @@ const deleteContact = async (req, res) => {
 }
 };
 
-module.exports = { getAll, getOne, createContact, updateContact, deleteContact };
+module.exports = { getAll, getOne, createCorrective };
